change cluster type

--- a/conf/cigogne.config
+++ b/conf/cigogne.config
@@ -1,6 +1,12 @@
-process {
-  executor = 'pbs'
-  queue = 'shortq'
-  clusterOptions = '-V'
+//process {
+//  executor = 'pbs'
+//  queue = 'shortq'
+//  clusterOptions = '-V'
 
+//}
+
+process {
+  executor = 'slurm'
+  queue = 'longq'
+  clusterOptions = '--export=ALL'
 }
