remove uncessary code

--- a/conf/base.config
+++ b/conf/base.config
@@ -14,9 +14,6 @@ params {
   max_memory = 128.GB
   max_cpus = 16
   max_time = 240.h
-  //igenomes_base = '/data/bioinfo/rnafusion_references/igenomes/'
-  igenomes_base = '/mnt/beegfs/scratch/m_diop/rnafusion_references/igenomes'
-  star_index = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Sequence/STARIndex/"
 }
 
 process {
@@ -93,7 +90,7 @@ process {
     cpus = { check_max (10, 'cpus')}
     memory = { check_max( 60.GB * task.attempt, 'memory' ) }
   }
-  withName:summary {
+  //withName:summary {
     //container = "nfcore/rnafusion:summary-report_v${params.container_version}"
-  }
+  //}
 }
