remove unnecessary code

--- a/conf/cigogne.config
+++ b/conf/cigogne.config
@@ -1,12 +1,6 @@
-//process {
-//  executor = 'pbs'
-//  queue = 'shortq'
-//  clusterOptions = '-V'
-
-//}
-
 process {
-  executor = 'slurm'
-  queue = 'longq'
-  clusterOptions = '--export=ALL'
+  executor = 'pbs'
+  queue = 'shortq'
+  clusterOptions = '-V'
+
 }
