add reference paths

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,7 +34,17 @@ params {
   reads = "data/*{1,2}.fastq.gz"
   singleEnd = false
   outdir = './results'
-  igenomes_base = "./iGenomes"
+
+  reference_base = '/mnt/beegfs/database/bioinfo/rnafusion_references'
+  igenomes_base = "${params.reference_base}/igenomes"
+  // star index for 101bp reads by default
+  star_index = "${params.igenomes_base}/Homo_sapiens/Ensembl/${params.genome}/Sequence/STARIndex/"
+  fusioncatcher_ref = "${params.reference_base}/fusioncatcher_ref/human_v90"
+  star_fusion_ref = "${params.reference_base}/star_fusion_ref/GRCh37_v19_CTAT_lib_Feb092018/ctat_genome_lib_build_dir/"
+  ericscript_ref = "${params.reference_base}/ericscript_ref/ericscript_db_homosapiens_ensembl73"
+  pizzly_fasta = "${params.reference_base}/pizzly_ref/Homo_sapiens.GRCh37.75.cdna.all.fa.gz"
+  pizzly_gtf = "${params.reference_base}/pizzly_ref/Homo_sapiens.GRCh37.75.gtf"
+
   tracedir = "${params.outdir}/pipeline_info"
   clusterOptions = false
   awsqueue = false
@@ -47,15 +57,17 @@ includeConfig 'conf/base.config'
 
 // Load nf-core custom profiles from different Institutions
 // includeConfig "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}/nfcore_custom.config"
-// Load config file for cluster cigogne
-includeConfig 'conf/cigogne.config'
-includeConfig 'conf/munin-singularity.config'
+// Load config file for cluster flamingo
+includeConfig 'conf/flamingo.config'
 
 profiles {
   awsbatch { includeConfig 'conf/awsbatch.config' }
   conda { process.conda = "$baseDir/environment.yml" }
   docker { docker.enabled = true }
-  singularity { singularity.enabled = true }
+  singularity {
+    singularity.enabled = true
+    includeConfig 'conf/singularity.config'
+ }
   test {
     includeConfig 'conf/test.config'
   }
@@ -63,9 +75,7 @@ profiles {
     singularity.enabled = false
     includeConfig 'conf/munin-docker.config'
   }
-  munin_singularity {
-    includeConfig 'conf/munin-singularity.config'
-  }
+
 }
 
 // Load igenomes.config if required
