--- a/nextflow.config
+++ b/nextflow.config
@@ -35,10 +35,10 @@ params {
   singleEnd = false
   outdir = './results'
 
-  igenomes_base = '/data/bioinfo/rnafusion_references/igenomes/'
-  // star index for 101bp reads by default
-  star_index = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Sequence/STARIndex/"
   reference_base = '/data/bioinfo/rnafusion_references'
+  igenomes_base = "${params.reference_base}/igenomes"
+  // star index for 101bp reads by default
+  star_index = "${params.igenomes_base}/Homo_sapiens/Ensembl/${params.genome}/Sequence/STARIndex/"
   fusioncatcher_ref = "${params.reference_base}/fusioncatcher_ref/human_v90"
   star_fusion_ref = "${params.reference_base}/star_fusion_ref/GRCh37_v19_CTAT_lib_Feb092018/ctat_genome_lib_build_dir/"
   ericscript_ref = "${params.reference_base}/ericscript_ref/ericscript_db_homosapiens_ensembl73"
